// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<hr
  aria-orientation="horizontal"
  class="wp-components-divider css-16mh1q3"
  data-g2-c16t="true"
  data-g2-component="Divider"
  role="separator"
/>
`;

exports[`props should render margin 1`] = `
<hr
  aria-orientation="horizontal"
  class="wp-components-divider css-12ynuxc"
  data-g2-c16t="true"
  data-g2-component="Divider"
  role="separator"
/>
`;

exports[`props should render marginBottom 1`] = `
<hr
  aria-orientation="horizontal"
  class="wp-components-divider css-1nuq76j"
  data-g2-c16t="true"
  data-g2-component="Divider"
  role="separator"
/>
`;

exports[`props should render marginTop 1`] = `
<hr
  aria-orientation="horizontal"
  class="wp-components-divider css-tnhwxk"
  data-g2-c16t="true"
  data-g2-component="Divider"
  role="separator"
/>
`;
